k9s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: galp-service
spec:
  type: LoadBalancer
  selector:
    app: galp
  ports:
    - port: 5000
      targetPort: 80
      protocol: TCP
