k9s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: galp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: "/challenge"
        pathType: Prefix
        backend:
          service:
            name: galp-service
            port:
              number: 5000
  ingressClassName: nginx
